# Autonomous-Driving-Robot

./: .gitignore  README.md
ros_ws/: .gitignore  .hiwonderrc  .typerc  .virtualrc  liste_package.txt
ros_ws/.ssh/: id_rsa.pub
ros_ws/src/hiwonder_app/scripts/: lidar.py  line_following.py  object_tracking.py
ros_ws/src/hiwonder_bringup/launch/: bringup.launch
ros_ws/src/hiwonder_bringup/scripts/: source_env_modify.bash
ros_ws/src/hiwonder_calibration/config/: imu_calib.yaml
ros_ws/src/hiwonder_calibration/launch/: calibrate_imu.launch  depth_cam_ir_calibration.launch
ros_ws/src/hiwonder_calibration/src/: calibrate_angular.py  calibrate_linear.py
ros_ws/src/hiwonder_example/config/: automatic_pick_roi.yaml
ros_ws/src/hiwonder_example/launch/: ar_detect_demo.launch
ros_ws/src/hiwonder_example/rviz/: apriltag.rviz  ar.rviz  depth_cam_point_cloud.rviz
ros_ws/src/hiwonder_multi/launch/: joy_control.launch
ros_ws/src/hiwonder_navigation/config/: base_global_planner_param.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ros_ws/src/hiwonder_navigation/launch/: navigation.launch  publish_point.launch  rtabmap_navigation.launch  rviz_navigation.launch
ros_ws/src/laser_scan_navigator/: CMakeLists.txt  package.xml
ros_ws/src/laser_scan_navigator/launch/: laser_scan_navigator.launch
ros_ws/src/laser_scan_navigator/scripts/: laser_scan_navigator.py
ros_ws/src/sign_detection/: CMakeLists.txt  package.xml
ros_ws/src/yolo/: best.pt  project.py  yolo1.launch
(+102 files in other folders)
